--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,43 @@
-api==0.0.7
-astroid==1.5.3
-Babel==2.5.0
-blinker==1.4
-certifi==2017.7.27.1
+alembic==0.9.6
+aniso8601==1.3.0
+bcrypt==3.1.4
+certifi==2017.11.5
+cffi==1.11.2
 chardet==3.0.4
 click==6.7
-colorama==0.3.9
-coverage==4.4.1
+coverage==4.4.2
 coveralls==1.2.0
-decorator==4.1.2
+cryptography==1.7.2
 docopt==0.6.2
 Flask==0.12.2
 Flask-API==1.0
-Flask-BabelEx==0.9.3
-Flask-Login==0.4.0
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-Security==3.0.0
-Flask-Testing==0.6.2
-Flask-WTF==0.14.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-Migrate==2.1.1
+flask-restplus==0.10.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 gunicorn==19.7.1
 idna==2.6
-isort==4.2.15
 itsdangerous==0.24
-Jinja2==2.9.6
-lazy-object-proxy==1.3.1
+Jinja2==2.10
+jsonify==0.5
+jwt==0.5.2
+Mako==1.0.7
 MarkupSafe==1.0
-mccabe==0.6.1
 nose==1.3.7
-passlib==1.7.1
-pbr==3.1.1
-pylint==1.7.2
-pytz==2017.2
+psycopg2==2.7.3.2
+pyasn1==0.4.2
+pycparser==2.18
+PyJWT==1.5.3
+python-dateutil==2.6.1
+python-editor==1.0.3
+pytz==2017.3
 requests==2.18.4
-six==1.10.0
-speaklater==1.3
-stevedore==1.25.0
+six==1.11.0
+SQLAlchemy==1.2.0
+typing==3.5.3.0
 urllib3==1.22
-validators==0.12.0
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
+waitress==1.1.0
 Werkzeug==0.12.2
-wrapt==1.10.11
-WTForms==2.1
