--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: python
 python:
 - "3.4"
 install: pip install -r requirements.txt
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database brighteventsapi;' -U postgres
+
 script: nosetests --with-coverage --cover-package=tests/ && coverage report
+
 after_success: coveralls
