--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-API==1.0
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
+flask-paginate==0.5.1
 flask-restplus==0.10.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
