--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.9.6
 aniso8601==1.3.0
 bcrypt==3.1.4
+blinker==1.4
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
@@ -19,7 +20,6 @@ flask-restplus==0.10.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
-gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
@@ -41,3 +41,4 @@ typing==3.5.3.0
 urllib3==1.22
 waitress==1.1.0
 Werkzeug==0.12.2
+Whoosh==2.7.4
