--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ docopt==0.6.2
 Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.4
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
 flask-paginate==0.5.1
@@ -24,6 +25,7 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 jsonify==0.5
+jsonschema==2.6.0
 Mako==1.0.7
 MarkupSafe==1.0
 nose==1.3.7
