--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,44 @@
-alembic==0.9.6
-aniso8601==1.3.0
+alembic==1.0.0
+aniso8601==3.0.2
+asn1crypto==0.24.0
 bcrypt==3.1.4
-blinker==1.4
-certifi==2017.11.5
-cffi==1.11.2
+certifi==2018.8.13
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
-coverage==4.4.2
-coveralls==1.2.0
-cryptography==1.7.2
+coverage==4.5.1
+coveralls==1.3.0
+cryptography==2.3.1
 docopt==0.6.2
-Flask==0.12.2
+Flask==1.0.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.4
+Flask-Cors==3.0.6
 Flask-Login==0.4.1
-Flask-Migrate==2.1.1
+Flask-Migrate==2.2.1
 flask-paginate==0.5.1
-flask-restplus==0.10.1
+flask-restplus==0.11.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
-idna==2.6
+gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
-jsonify==0.5
 jsonschema==2.6.0
 Mako==1.0.7
 MarkupSafe==1.0
 nose==1.3.7
-psycopg2==2.7.3.2
-pyasn1==0.4.2
+psycopg2==2.7.5
+pyasn1==0.4.4
 pycparser==2.18
-PyJWT==1.5.3
-python-dateutil==2.6.1
+PyJWT==1.6.4
+python-dateutil==2.7.3
 python-editor==1.0.3
-pytz==2017.3
-requests==2.18.4
+pytz==2018.5
+requests==2.19.1
 six==1.11.0
-SQLAlchemy==1.2.0
-typing==3.5.3.0
-urllib3==1.22
+SQLAlchemy==1.2.10
+urllib3==1.23
 waitress==1.1.0
-Werkzeug==0.12.2
+Werkzeug==0.14.1
